# deep-learning-from-scratch-2

./: README.md  ch01.jupyter.py  ch02.jupyter.py  ch03.jupyter.py  ch04.jupyter.py  pyproject.toml
ch04/: negative_sampling_layer.py
common/: util.py
dataset/: spiral.py
