[project]
name = "deep-learning-from-scratch-2"
version = "0.1.0"
dependencies = [
    "numpy<1.24",
    "matplotlib>=3.9.0",
    "setuptools>=69.5.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deep_learning_from_scratch_2"]
