[project]
name = "deep-learning-from-scratch-2"
version = "0.1.0"
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.9.0",
    "ipykernel>=6.29.4",
    "scikit-learn>=1.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deep_learning_from_scratch_2"]
